--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "psr-4": { "Omnipay\\Mpesa\\" : "src/" }
     },
     "require": {
-        "omnipay/common": "~2.0"
+        "php-http/guzzle6-adapter": "^1.0", 
+        "omnipay/common": "~3.0"
     },
     "require-dev": {
         "omnipay/tests": "~2.0"
